Fix T47723: Custom shape not copied w/ edit-bone